--- a/css/custom.css
+++ b/css/custom.css
@@ -165,6 +165,74 @@ img {
     height: 80px;
 }
 
+.secondcover .front .title {
+    font-family: 'Questrial', sans-serif;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 10px #000;
+    font-size: 60px;
+    text-align: right;
+}
+.secondcover .front .thumbnail {
+    height: 700px;
+    background-image: url('../img/shadow.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 10px 15px 20px #fff;
+}
+
+.color {
+    color: black;
+}
+.secondcover .front::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   background: linear-gradient(270.2deg, rgba(255, 20, 20, 0.5) 22%, rgba(9, 3, 16, 0.5) 21%),
+   linear-gradient(-441.8deg, rgba(0, 0, 0, 0.5) 67%, rgb(142, 24, 15) 105%);
+}
+
+.secondcover .footer p {
+    color: #fff;
+}
+
+
+.thirdcover .front .title {
+    font-family: 'Questrial', sans-serif;
+    text-transform: uppercase;
+    text-shadow: 6px 0 0 #000;
+    font-size: 60px;
+    text-align: center;
+}
+
+.thirdcover .front .thumbnail {
+    height: 700px;
+    background-image: none;
+    box-shadow: 10px 1px 5px #fff;
+}
+
+.color {
+    color: black;
+}
+
+
+
+.thirdcover .front::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   background: linear-gradient(90deg, rgb(255, 255, 255) 50%, rgb(0, 0, 0) 50%);
+   }
+
+.thirdcover .footer p {
+    color: #fff;
+}
+
 @media screen and (max-width: 1367px) and (min-width: 1024px) {
     .back,
     .front {
