--- a/css/custom.css
+++ b/css/custom.css
@@ -172,17 +172,23 @@ img {
     font-size: 60px;
     text-align: right;
 }
+
 .secondcover .front .thumbnail {
     height: 700px;
     background-image: url('../img/shadow.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 10px 15px 20px #fff;
 }
 
-.color {
-    color: black;
+.secondcover .color {
+    color: #999;
+    border-top: 2px solid #999;
+    border-bottom: 2px solid #999;
 }
+.color {
+    color: #000;
+}
+
 .secondcover .front::before {
     position: absolute;
     content: "";
@@ -190,19 +196,17 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-   background: linear-gradient(270.2deg, rgba(255, 20, 20, 0.5) 22%, rgba(9, 3, 16, 0.5) 21%),
-   linear-gradient(-441.8deg, rgba(0, 0, 0, 0.5) 67%, rgb(142, 24, 15) 105%);
+    background: linear-gradient(270.2deg, rgba(255, 20, 20, 0.5) 22%, rgba(9, 3, 16, 0.5) 21%), linear-gradient(-441.8deg, rgba(0, 0, 0, 0.5) 67%, rgb(142, 24, 15) 105%);
 }
 
 .secondcover .footer p {
     color: #fff;
 }
 
-
 .thirdcover .front .title {
     font-family: 'Questrial', sans-serif;
     text-transform: uppercase;
-    text-shadow: 6px 0 0 #000;
+    text-shadow: 1px 0 0 #000;
     font-size: 60px;
     text-align: center;
 }
@@ -210,13 +214,7 @@ img {
 .thirdcover .front .thumbnail {
     height: 700px;
     background-image: none;
-    box-shadow: 10px 1px 5px #fff;
 }
-
-.color {
-    color: black;
-}
-
 
 
 .thirdcover .front::before {
@@ -226,11 +224,43 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-   background: linear-gradient(90deg, rgb(255, 255, 255) 50%, rgb(0, 0, 0) 50%);
-   }
+    background: linear-gradient(90deg, rgb(255, 255, 255) 50%, rgb(0, 0, 0) 50%);
+}
 
 .thirdcover .footer p {
     color: #fff;
+}
+
+.fourthcover .front .title {
+    text-transform: none;
+    text-align: left;
+    font-family: 'League Script', cursive;
+    text-shadow: none;
+    color: rgb(76, 73, 255);
+    font-weight: bold;
+    font-size: 40px;
+    text-shadow: 0 2px 2px #000;
+}
+
+.fourthcover .front .thumbnail {
+    height: 700px;
+    background-image: url('../img/arms.jpg');
+    padding: 20px;
+    z-index: 1000;
+}
+
+.fourthcover .front::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(221deg, rgba(3, 230, 203, 0.7) 60%, rgba(211, 165, 239, 0.7) 77%);
+}
+
+.fourthcover .footer p {
+    color: #000;
 }
 
 @media screen and (max-width: 1367px) and (min-width: 1024px) {
