--- a/css/custom.css
+++ b/css/custom.css
@@ -233,13 +233,13 @@ img {
 
 .fourthcover .front .title {
     text-transform: none;
-    text-align: left;
-    font-family: 'League Script', cursive;
+    text-align: center;
+    font-family: 'Aladin', cursive;
     text-shadow: none;
-    color: rgb(76, 73, 255);
+    color: #444;
     font-weight: bold;
     font-size: 40px;
-    text-shadow: 0 2px 2px #000;
+    letter-spacing: 1.3px;
 }
 
 .fourthcover .front .thumbnail {
@@ -255,7 +255,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(221deg, rgba(3, 230, 203, 0.7) 60%, rgba(211, 165, 239, 0.7) 77%);
+   background: linear-gradient(221deg, rgba(167, 129, 152, 0.7) 65%, rgba(253, 47, 0, 0.4) 58%);
 }
 
 .fourthcover .footer p {
