--- a/css/custom.css
+++ b/css/custom.css
@@ -185,6 +185,7 @@ img {
     border-top: 2px solid #999;
     border-bottom: 2px solid #999;
 }
+
 .color {
     color: #000;
 }
@@ -209,6 +210,7 @@ img {
     text-shadow: 1px 0 0 #000;
     font-size: 60px;
     text-align: center;
+    letter-spacing: 10px;
 }
 
 .thirdcover .front .thumbnail {
@@ -216,6 +218,13 @@ img {
     background-image: none;
 }
 
+.half {
+    background: -webkit-linear-gradient(180deg, white 50%, black 50%);
+    background: linear-gradient(top, black, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 20px 20px 52px #000000;
+}
 
 .thirdcover .front::before {
     position: absolute;
@@ -236,7 +245,7 @@ img {
     text-align: center;
     font-family: 'Aladin', cursive;
     text-shadow: none;
-    color: #444;
+    color: #000;
     font-weight: bold;
     font-size: 40px;
     letter-spacing: 1.3px;
@@ -255,7 +264,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-   background: linear-gradient(221deg, rgba(167, 129, 152, 0.7) 65%, rgba(253, 47, 0, 0.4) 58%);
+    background: linear-gradient(221deg, rgba(255, 255, 255, 0.7) 65%, rgba(253, 47, 0, 0.4) 58%);
 }
 
 .fourthcover .footer p {
