added new pages

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #000;
+    background-color: rgb(248, 95, 95);
 }
 
 img {
@@ -15,7 +15,7 @@ img {
     align-items: center;
     flex-wrap: wrap;
     padding: 2% 10%;
-    background-color: #000;
+    background-color: #a6a6d6;
 }
 
 .back,
@@ -270,6 +270,155 @@ img {
 .fourthcover .footer p {
     color: #000;
 }
+
+.fifthcover .color {
+    color: rgb(171, 7, 7);
+}
+
+.fifthcover .front .title {
+    text-align: center;
+    font-family: 'Questrial', cursive;
+    text-shadow: none;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 90px;
+    text-transform: uppercase;
+}
+
+.fifthcover .front .subtitle {
+    font-family: 'Monoton', cursive;
+    text-transform: uppercase;
+    font-size: 10px;
+    color: #000;
+    letter-spacing: 3px;
+}
+
+.fifthcover .front .thumbnail {
+    height: 700px;
+    background-image: url('../img/apart.png');
+    z-index: 1000;
+}
+
+.fifthcover .front::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0, 97, 255, 0.5) 35%, rgba(154, 245, 4, 0.6) 83%);
+}
+
+.fifthcover .footer p {
+    color: #000;
+}
+
+.sixthcover .color {
+    color: rgb(171, 7, 7);
+}
+
+.sixthcover .front .title {
+    text-align: left;
+    text-shadow: none;
+    color: #2174b3;
+    font-weight: bold;
+    font-size: 60px;
+    text-transform: uppercase;
+}
+
+
+
+.sixthcover .front .thumbnail {
+    height: 700px;
+    background-image: url('../img/december.png');
+    /* background-position: center; */
+    z-index: 1000;
+}
+
+.sixthcover .front::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(186.6deg, rgba(14, 152, 221, 0.6) 30%, rgba(0, 0, 0, 0.5) 82%);
+}
+
+.sixthcover .footer p {
+    color: #fff;
+}
+
+.seventhcover .color {
+    color: rgb(255, 255, 255);
+    font-style: italic;
+}
+
+.seventhcover .front .title {
+    text-align: right;
+    font-family: "Raleway";
+    text-shadow: none;
+    color: yellow;
+    font-weight: bold;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+.seventhcover .front .thumbnail {
+    height: 700px;
+    background-image: url('../img/wings.png');
+    z-index: 1000;
+}
+
+.seventhcover .front::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(255, 3, 3, 0.5) 35%, rgba(0, 0, 0, 0.6) 83%);
+}
+
+.seventhcover .footer p {
+    color: skyblue;
+}
+
+.eighthcover .color {
+    color: rgb(255, 255, 255);
+    font-style: italic;
+}
+
+.eighthcover .front .title {
+    text-align: right;
+    font-family: "Megrim";
+    text-shadow: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 90px;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+}
+
+.eighthcover .front .thumbnail {
+    height: 700px;
+    background-image: url('../img/joker.jpg');
+    background-position-x: -30px;
+    z-index: 1000;
+}
+
+.eighthcover .front::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+}
+
 
 @media screen and (max-width: 1367px) and (min-width: 1024px) {
     .back,
