added changes and bgcolor

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: rgb(248, 95, 95);
+    background-color: rgb(92, 92, 91);
 }
 
 img {
@@ -14,25 +14,15 @@ img {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 2% 10%;
-    background-color: #a6a6d6;
+    padding: 10%;
+    background-color: #f89e9e;
 }
 
-.back,
 .front {
     position: relative;
-    width: 33%;
+    width: 30%;
 }
 
-.back::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(169.2deg, rgba(0, 0, 0, 0.5) 51%, rgba(255, 255, 255, 0.5) 98%), linear-gradient(169.2deg, rgba(0, 0, 0, 0.5) 100%, rgba(255, 255, 255, 0.5) 31%);
-}
 
 .front::before {
     position: absolute;
@@ -49,12 +39,7 @@ img {
     background-image: url('../img/front.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.back .thumbnail {
-    height: 700px;
-    background-image: url('../img/back.jpg');
-    text-align: left;
+     box-shadow: 15px 10px 15px #925656;
 }
 
 .sidebar {
@@ -93,7 +78,6 @@ img {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    padding: 20px;
 }
 
 .front .content .title {
@@ -125,34 +109,13 @@ img {
 .front .footer {
     text-transform: uppercase;
     font-size: 8px;
+    margin: 30px;
     font-weight: 900;
-}
-
-.back .content {
-    text-align: left;
-    font-size: 12px;
-    color: beige;
-}
-
-.back .content .title {
-    text-transform: uppercase;
-    color: wheat;
-    font-size: 18px;
-}
-
-.back .content .subtitle {
-    font-size: 12px;
-}
-
-.back .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
 }
 
 .header {
     margin-top: 25px;
+    padding: 20px;
 }
 
 .logo {
@@ -169,8 +132,8 @@ img {
     font-family: 'Questrial', sans-serif;
     text-transform: uppercase;
     text-shadow: 2px 2px 10px #000;
-    font-size: 60px;
-    text-align: right;
+    font-size: 40px;
+    text-align: justify;
 }
 
 .secondcover .front .thumbnail {
@@ -197,7 +160,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(270.2deg, rgba(255, 20, 20, 0.5) 22%, rgba(9, 3, 16, 0.5) 21%), linear-gradient(-441.8deg, rgba(0, 0, 0, 0.5) 67%, rgb(142, 24, 15) 105%);
+      background: linear-gradient(217.2deg, rgba(218, 111, 26, 0.5) 13%, rgba(9, 3, 16, 0.5) 13%), linear-gradient(-441.8deg, rgba(0, 0, 0, 0.5) 67%, rgb(142, 24, 15) 105%);
 }
 
 .secondcover .footer p {
@@ -208,9 +171,9 @@ img {
     font-family: 'Questrial', sans-serif;
     text-transform: uppercase;
     text-shadow: 1px 0 0 #000;
-    font-size: 60px;
+    font-size: 48px;
     text-align: center;
-    letter-spacing: 10px;
+    letter-spacing: 4px;
 }
 
 .thirdcover .front .thumbnail {
@@ -264,11 +227,11 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(221deg, rgba(255, 255, 255, 0.7) 65%, rgba(253, 47, 0, 0.4) 58%);
+    background: linear-gradient(-135deg, rgba(255, 255, 255, 0.7) 65%, rgba(253, 47, 0, 0.4) 58%);
 }
 
 .fourthcover .footer p {
-    color: #000;
+    color: #f9f9f9;
 }
 
 .fifthcover .color {
@@ -320,7 +283,7 @@ img {
 .sixthcover .front .title {
     text-align: left;
     text-shadow: none;
-    color: #2174b3;
+    color: #fff;
     font-weight: bold;
     font-size: 60px;
     text-transform: uppercase;
@@ -331,7 +294,6 @@ img {
 .sixthcover .front .thumbnail {
     height: 700px;
     background-image: url('../img/december.png');
-    /* background-position: center; */
     z-index: 1000;
 }
 
@@ -342,7 +304,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(186.6deg, rgba(14, 152, 221, 0.6) 30%, rgba(0, 0, 0, 0.5) 82%);
+    background: linear-gradient(186.6deg, rgba(46, 210, 226, 0.6) 30%, rgba(0, 0, 0, 0.5) 82%);
 }
 
 .sixthcover .footer p {
@@ -405,7 +367,7 @@ img {
 .eighthcover .front .thumbnail {
     height: 700px;
     background-image: url('../img/joker.jpg');
-    background-position-x: -30px;
+    background-position-x: -175px;
     z-index: 1000;
 }
 
@@ -421,20 +383,14 @@ img {
 
 
 @media screen and (max-width: 1367px) and (min-width: 1024px) {
-    .back,
     .front {
-        width: 48%;
+        width: 45%;
     }
 }
 
 @media screen and (max-width: 1024px) {
     .display {
-        padding: 2px 5px;
-    }
-    .back {
-        width: 100%;
-        order: 2;
-        margin: 5px;
+        padding: 20% 3%;
     }
     .sidebar {
         display: none;
@@ -443,5 +399,11 @@ img {
         width: 100%;
         order: 1;
         margin: 5px;
+    }
+    .front .thumbnail {
+        background-position: center;
+    }
+    .sixthcover .front .title {
+        font-size: 42px;
     }
 }
