--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@ img {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 10%;
+    padding: 5% 10%;
     background-color: #f89e9e;
 }
 
