minified css and HTML

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,409 +1,1 @@
-body {
-    margin: 0;
-    background-color: rgb(92, 92, 91);
-}
-
-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.display {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 5% 10%;
-    background-color: #f89e9e;
-}
-
-.front {
-    position: relative;
-    width: 30%;
-}
-
-
-.front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(169.2deg, rgba(0, 0, 0, 0.5) 75%, rgba(255, 255, 255, 0.5) 91%), linear-gradient(169.2deg, rgba(0, 0, 0, 0.5) 15%, rgba(255, 255, 255, 0.5) 64%);
-}
-
-.front .thumbnail {
-    height: 700px;
-    background-image: url('../img/front.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-     box-shadow: 15px 10px 15px #925656;
-}
-
-.sidebar {
-    background-color: #1bd;
-    width: 4%;
-    height: 700px;
-    font-family: 'Gruppo', cursive;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    /* border-top: 40px solid #163566; */
-}
-
-.sidebar span {
-    display: block;
-    color: #000;
-    text-transform: uppercase;
-    font-weight: 900;
-    text-align: center;
-    margin: 10px 0;
-    text-shadow: 0 6px 8px #000;
-    font-size: 20px;
-}
-
-.down {
-    margin-top: 10px;
-}
-
-.content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-}
-
-.front .content .title {
-    color: white;
-    text-transform: capitalize;
-    text-shadow: 0 5px 15px #000;
-    font-family: 'Fredericka the Great', cursive;
-    font-size: 40px;
-    margin-top: 30px;
-}
-
-.front .content .subtitle {
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 10px;
-    letter-spacing: 1.5px;
-}
-
-.front .content .author {
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-    letter-spacing: 5px;
-    font-weight: 900;
-    text-transform: uppercase;
-    font-size: 10px;
-}
-
-.front .footer {
-    text-transform: uppercase;
-    font-size: 8px;
-    margin: 30px;
-    font-weight: 900;
-}
-
-.header {
-    margin-top: 25px;
-    padding: 20px;
-}
-
-.logo {
-    width: 25px;
-    height: 25px;
-}
-
-.bar {
-    width: 80px;
-    height: 80px;
-}
-
-.secondcover .front .title {
-    font-family: 'Questrial', sans-serif;
-    text-transform: uppercase;
-    text-shadow: 2px 2px 10px #000;
-    font-size: 40px;
-    text-align: justify;
-}
-
-.secondcover .front .thumbnail {
-    height: 700px;
-    background-image: url('../img/shadow.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.secondcover .color {
-    color: #999;
-    border-top: 2px solid #999;
-    border-bottom: 2px solid #999;
-}
-
-.color {
-    color: #000;
-}
-
-.secondcover .front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-      background: linear-gradient(217.2deg, rgba(218, 111, 26, 0.5) 13%, rgba(9, 3, 16, 0.5) 13%), linear-gradient(-441.8deg, rgba(0, 0, 0, 0.5) 67%, rgb(142, 24, 15) 105%);
-}
-
-.secondcover .footer p {
-    color: #fff;
-}
-
-.thirdcover .front .title {
-    font-family: 'Questrial', sans-serif;
-    text-transform: uppercase;
-    text-shadow: 1px 0 0 #000;
-    font-size: 48px;
-    text-align: center;
-    letter-spacing: 4px;
-}
-
-.thirdcover .front .thumbnail {
-    height: 700px;
-    background-image: none;
-}
-
-.half {
-    background: -webkit-linear-gradient(180deg, white 50%, black 50%);
-    background: linear-gradient(top, black, white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: 20px 20px 52px #000000;
-}
-
-.thirdcover .front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, rgb(255, 255, 255) 50%, rgb(0, 0, 0) 50%);
-}
-
-.thirdcover .footer p {
-    color: #fff;
-}
-
-.fourthcover .front .title {
-    text-transform: none;
-    text-align: center;
-    font-family: 'Aladin', cursive;
-    text-shadow: none;
-    color: #000;
-    font-weight: bold;
-    font-size: 40px;
-    letter-spacing: 1.3px;
-}
-
-.fourthcover .front .thumbnail {
-    height: 700px;
-    background-image: url('../img/arms.jpg');
-    z-index: 1000;
-}
-
-.fourthcover .front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(-135deg, rgba(255, 255, 255, 0.7) 65%, rgba(253, 47, 0, 0.4) 58%);
-}
-
-.fourthcover .footer p {
-    color: #f9f9f9;
-}
-
-.fifthcover .color {
-    color: rgb(171, 7, 7);
-}
-
-.fifthcover .front .title {
-    text-align: center;
-    font-family: 'Questrial', cursive;
-    text-shadow: none;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    font-size: 90px;
-    text-transform: uppercase;
-}
-
-.fifthcover .front .subtitle {
-    font-family: 'Monoton', cursive;
-    text-transform: uppercase;
-    font-size: 10px;
-    color: #000;
-    letter-spacing: 3px;
-}
-
-.fifthcover .front .thumbnail {
-    height: 700px;
-    background-image: url('../img/apart.png');
-    z-index: 1000;
-}
-
-.fifthcover .front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, rgba(0, 97, 255, 0.5) 35%, rgba(154, 245, 4, 0.6) 83%);
-}
-
-.fifthcover .footer p {
-    color: #000;
-}
-
-.sixthcover .color {
-    color: rgb(171, 7, 7);
-}
-
-.sixthcover .front .title {
-    text-align: left;
-    text-shadow: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 60px;
-    text-transform: uppercase;
-}
-
-
-
-.sixthcover .front .thumbnail {
-    height: 700px;
-    background-image: url('../img/december.png');
-    z-index: 1000;
-}
-
-.sixthcover .front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(186.6deg, rgba(46, 210, 226, 0.6) 30%, rgba(0, 0, 0, 0.5) 82%);
-}
-
-.sixthcover .footer p {
-    color: #fff;
-}
-
-.seventhcover .color {
-    color: rgb(255, 255, 255);
-    font-style: italic;
-}
-
-.seventhcover .front .title {
-    text-align: right;
-    font-family: "Raleway";
-    text-shadow: none;
-    color: yellow;
-    font-weight: bold;
-    font-size: 30px;
-    text-transform: uppercase;
-}
-
-.seventhcover .front .thumbnail {
-    height: 700px;
-    background-image: url('../img/wings.png');
-    z-index: 1000;
-}
-
-.seventhcover .front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, rgba(255, 3, 3, 0.5) 35%, rgba(0, 0, 0, 0.6) 83%);
-}
-
-.seventhcover .footer p {
-    color: skyblue;
-}
-
-.eighthcover .color {
-    color: rgb(255, 255, 255);
-    font-style: italic;
-}
-
-.eighthcover .front .title {
-    text-align: right;
-    font-family: "Megrim";
-    text-shadow: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 90px;
-    text-transform: uppercase;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-}
-
-.eighthcover .front .thumbnail {
-    height: 700px;
-    background-image: url('../img/joker.jpg');
-    background-position-x: -175px;
-    z-index: 1000;
-}
-
-.eighthcover .front::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4);
-}
-
-
-@media screen and (max-width: 1367px) and (min-width: 1024px) {
-    .front {
-        width: 45%;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .display {
-        padding: 20% 3%;
-    }
-    .sidebar {
-        display: none;
-    }
-    .front {
-        width: 100%;
-        order: 1;
-        margin: 5px;
-    }
-    .front .thumbnail {
-        background-position: center;
-    }
-    .sixthcover .front .title {
-        font-size: 42px;
-    }
-}
+body{margin:0;background-color:rgb(92,92,91);display:flex;flex-wrap:wrap}section{width:50%}img{width:100%;height:100%;object-fit:cover}.display{display:flex;justify-content:center;align-items:center;flex-wrap:wrap;padding:5% 10%;background-color:#f89e9e}.front{position:relative;width:500px}.front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:linear-gradient(169.2deg,rgba(0,0,0,.5) 75%,rgba(255,255,255,.5) 91%),linear-gradient(169.2deg,rgba(0,0,0,.5) 15%,rgba(255,255,255,.5) 64%)}.front .thumbnail{height:700px;background-image:url(../img/front.jpg);background-repeat:no-repeat;background-size:cover;box-shadow:15px 10px 15px #925656}.sidebar{background-color:#1bd;width:4%;height:700px;font-family:'Gruppo',cursive;display:flex;justify-content:space-evenly;flex-direction:column}.sidebar span{display:block;color:#000;text-transform:uppercase;font-weight:900;text-align:center;margin:10px 0;text-shadow:0 6px 8px #000;font-size:20px}.down{margin-top:10px}.content{position:absolute;width:100%;height:100%;font-family:'Montserrat',sans-serif;text-align:center;display:flex;justify-content:space-between;align-items:center;flex-direction:column}.front .content .title{color:white;text-transform:capitalize;text-shadow:0 5px 15px #000;font-family:'Fredericka the Great',cursive;font-size:40px;margin-top:30px}.front .content .subtitle{font-family:'Montserrat',sans-serif;color:#fff;text-transform:uppercase;font-size:10px;letter-spacing:1.5px}.front .content .author{font-family:'Montserrat',sans-serif;color:#fff;letter-spacing:5px;font-weight:900;text-transform:uppercase;font-size:10px}.front .footer{text-transform:uppercase;font-size:8px;margin:30px;font-weight:900}.header{margin-top:25px;padding:20px}.logo{width:25px;height:25px}.bar{width:80px;height:80px}.secondcover .front .title{font-family:'Questrial',sans-serif;text-transform:uppercase;text-shadow:2px 2px 10px #000;font-size:40px;text-align:justify}.secondcover .front .thumbnail{height:700px;background-image:url(../img/shadow.jpg);background-repeat:no-repeat;background-size:cover}.secondcover .color{color:#999;border-top:2px solid #999;border-bottom:2px solid #999}.color{color:#000}.secondcover .front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:linear-gradient(217.2deg,rgba(218,111,26,.5) 13%,rgba(9,3,16,.5) 13%),linear-gradient(-441.8deg,rgba(0,0,0,.5) 67%,rgb(142,24,15) 105%)}.secondcover .footer p{color:#fff}.thirdcover .front .title{font-family:'Questrial',sans-serif;text-transform:uppercase;text-shadow:1px 0 0 #000;font-size:48px;text-align:center;letter-spacing:4px}.thirdcover .front .thumbnail{height:700px;background-image:none}.half{background:-webkit-linear-gradient(180deg,white 50%,black 50%);background:linear-gradient(top,black,white);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-shadow:20px 20px 52px #000}.thirdcover .front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:linear-gradient(90deg,rgb(255,255,255) 50%,rgb(0,0,0) 50%)}.thirdcover .footer p{color:#fff}.fourthcover .front .title{text-transform:none;text-align:center;font-family:'Aladin',cursive;text-shadow:none;color:#000;font-weight:700;font-size:40px;letter-spacing:1.3px}.fourthcover .front .thumbnail{height:700px;background-image:url(../img/arms.jpg);z-index:1000}.fourthcover .front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:linear-gradient(-135deg,rgba(255,255,255,.7) 65%,rgba(253,47,0,.4) 58%)}.fourthcover .footer p{color:#f9f9f9}.fifthcover .color{color:rgb(171,7,7)}.fifthcover .front .title{text-align:center;font-family:'Questrial',cursive;text-shadow:none;color:rgb(255,255,255);font-weight:700;font-size:90px;text-transform:uppercase}.fifthcover .front .subtitle{font-family:'Monoton',cursive;text-transform:uppercase;font-size:10px;color:#000;letter-spacing:3px}.fifthcover .front .thumbnail{height:700px;background-image:url(../img/apart.png);z-index:1000}.fifthcover .front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:linear-gradient(180deg,rgba(0,97,255,.5) 35%,rgba(154,245,4,.6) 83%)}.fifthcover .footer p{color:#000}.sixthcover .color{color:rgb(171,7,7)}.sixthcover .front .title{text-align:left;text-shadow:none;color:#fff;font-weight:700;font-size:60px;text-transform:uppercase}.sixthcover .front .thumbnail{height:700px;background-image:url(../img/december.png);z-index:1000}.sixthcover .front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:linear-gradient(186.6deg,rgba(46,210,226,.6) 30%,rgba(0,0,0,.5) 82%)}.sixthcover .footer p{color:#fff}.seventhcover .color{color:rgb(255,255,255);font-style:italic}.seventhcover .front .title{text-align:right;font-family:"Raleway";text-shadow:none;color:yellow;font-weight:700;font-size:30px;text-transform:uppercase}.seventhcover .front .thumbnail{height:700px;background-image:url(../img/wings.png);z-index:1000}.seventhcover .front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:linear-gradient(180deg,rgba(255,3,3,.5) 35%,rgba(0,0,0,.6) 83%)}.seventhcover .footer p{color:skyblue}.eighthcover .color{color:rgb(255,255,255);font-style:italic}.eighthcover .front .title{text-align:right;font-family:"Megrim";text-shadow:none;color:#fff;font-weight:700;font-size:90px;text-transform:uppercase;position:absolute;bottom:20px;left:20px}.eighthcover .front .thumbnail{height:700px;background-image:url(../img/joker.jpg);background-position-x:-175px;z-index:1000}.eighthcover .front::before{position:absolute;content:"";top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.4)}@media screen and (max-width:1367px){section{width:100%}.display{padding:20% 2%}.sidebar{display:none}.front .thumbnail{background-position:center}.sixthcover .front .title{font-size:42px}}
